--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,8 +1,43 @@
-body > div {
+* {
+	box-sizing: border-box;
+}
+
+html,
+body {
+	width: 100%;
+  height: 100%;
+	padding: 0;
+	margin: 0;
+	border: 0;
+}
+
+body {
+	font-family: sans-serif;
+}
+
+.loading {
+  background-color: #f1f2f3; /* color of loading gif */
+  opacity: 0.8;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  height: 100%;
+  width: 100%;
+
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+body > .container-fluid {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 100%
 }
 
 #video {
