--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,10 +15,13 @@ body {
 	font-family: sans-serif;
 }
 
-.loading {
+#loading {
   background-color: #f1f2f3; /* color of loading gif */
   opacity: 0.8;
+}
 
+#loading,
+#plot {
   position: absolute;
   top: 0;
   left: 0;
