--- a/public/css/main.css
+++ b/public/css/main.css
@@ -49,7 +49,7 @@ body > .container-fluid {
   height: 100%;
 }
 
-.user-announcement {
+#user-announcement {
 	text-align: center;
 	width: 420px;
 }
